# TvWallauShop

./: .dockerignore  .gitignore  README.md  nx.json  package.json  pom.xml
backend/: .gitignore  Dockerfile  README.md  knexfile.ts  package.json  pom.xml  project.json  tsconfig.json  tsconfig.migrations.json
backend/migrations/: 202512091000_init_schema.ts  202512101200_add_finalized_status.ts
backend/seeds/: 001_initial_data.ts
backend/src/: app.ts  database.ts  index.ts
backend/tests/: placeholder.test.js  product-ai-short-title.test.js
contracts/: package.json  pom.xml  project.json  tsconfig.json
contracts/schema/: analyze-product-request.schema.json  analyze-product-response.schema.json
contracts/src/: ai-errors.ts  ai-product.ts  auth.ts  errors.ts  index.ts  order.ts  product.ts  (+1 more)
frontend/: Dockerfile  README.md  index.html  package.json  pom.xml  project.json  tsconfig.json  vite-env.d.ts  vite.config.ts
infra/: .env.example  README.md  backend.env.example  docker-compose.yml  pom.xml  project.json
python_ai_service/: .env  Dockerfile  README.md  example.env  package.json  pom.xml  project.json  pyproject.toml  requirements.txt  run_dev.cmd
python_ai_service/app/: __init__.py  config.py  contracts_models.py  main.py  model_manager.py  openvino_tokenizers_ext.py  ov_runtime.py  schemas.py
python_ai_service/app/services/: __init__.py  description_gen.py  errors.py  image_inference.py  jobs.py  model_loader.py
python_ai_service/app/services/generator/: __init__.py  brand_inference.py  image_inference.py
python_ai_service/app/services/generator/caption/: __init__.py  cleanup.py  generator.py  image_loader.py  merge.py  similarity.py  translate_de.py
python_ai_service/app/services/generator/text/: __init__.py  engine.py  postprocess.py  scoring.py  service.py  tasks.py
python_ai_service/app/services/loader/: __init__.py  brand_model_loader.py  caption_model_loader.py  model_loader.py  text_model_loader.py
python_ai_service/app/services/pipeline/: __init__.py  captioner_openvino.py  image_loader.py  llm_openvino_genai.py  multi_image.py  normalize.py  orchestrator.py  prompts.py  tagger_openvino.py
python_ai_service/app/tools/: __init__.py  convert_blip_to_openvino.py  convert_clip_to_openvino.py
python_ai_service/scripts/: generate_contracts.py  service.py
python_ai_service/tests/: test_llm_output.py  test_multi_image_pipeline.py  test_normalize.py  test_orchestrator_multi_image.py  test_placeholders.py  test_request_validation.py
scripts/: kill-port.ps1
(+121 files in other folders)
