[project]
name = "tvwallau-ai-service"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "python-dotenv",
  "numpy",
  "requests",
  "Pillow",
  "openvino>=2024.0",
  "openvino-genai",
  "datamodel-code-generator",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# Wichtig: verhindert, dass setuptools aus Versehen "target" als Package mitsammelt
[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["target*", ".venv*", "scripts*", "tests*"]

[tool.uv]
dev-dependencies = ["pytest"]
