[project]
name = "tvwallau-ai-service"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "python-dotenv",
  "numpy",
  "requests",
  "Pillow",
  "filelock>=3.13.0",
  "openvino>=2024.0",
  "openvino-genai",
  "torch",
  "transformers",
  "datamodel-code-generator",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# Wichtig: verhindert, dass setuptools aus Versehen "target" als Package mitsammelt
[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["target*", ".venv*", "scripts*", "tests*"]

[dependency-groups]
dev = ["pytest"]
